--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,4 +150,15 @@ body {
     background: #474747 !important;
     border-radius: 12px !important;
   }
+
+  @media (max-width: 480px) {
+    width: 100vw !important;
+    max-width: 100vw !important;
+    height: 100vh !important;
+    max-height: 100vh !important;
+
+    .mat-mdc-dialog-container .mdc-dialog__surface {
+      border-radius: 0 !important;
+    }
+  }
 }
